--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,7 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-
+remappings = ["@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/"]
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+ffi = true #to get most recently deployed contract but keep it off if possible
+#ffi ture means we're allowing foundry to run commands on your machine
